<resources>
    <string name="app_name">PUBLIC OPINION</string>

    <string name="title_activity_login">Login</string>
    <string name="username">Email</string>
    <string name="mobile_login">Password</string>
    <string name="login">Sin In</string>
    <string name="hidername_login">PUBLIC OPINION SURVEY</string>


    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="address">Address</string>

    <string name="assembly">Assembly Constituency</string>
    <string name="dist">District</string>
    <string name="village">Village</string>
    <string name="tx1">Text1</string>
    <string name="tx2">Text2</string>
    <string name="tx3">Text3</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="save">Save</string>


    <string name="q1"> Q1.Are you satisfied with this state govt working ? </string>
    <string name="q2"> Q2.Are you satisfied with present MLA working ? </string>
    <string name="q3"> Q3.Which party are you vote on election ? </string>
    <string name="q4"> Q4.Who will you choose in next MLA election on  the below list?</string>
    <string name="q5"> Q5.Who will you choose in next MP election on  the below list? </string>
    <string name="q6"> Q6.Which party did vote for last election? </string>
    <string name="q7"> Q7. How is the </string>
    <string name="q8"> Q8. How is the </string>
    <string name="q9"> Q9. How is the </string>
    <string name="q10"> Q10. How is the </string>


    <string name="vp">Very Poor</string>
    <string name="poor">Poor</string>
    <string name="ok">Ok</string>
    <string name="good">Good</string>
    <string name="vgood">Very Good</string>


    <string name="logout">Logout</string>
    <string name="scnz">Synchronize</string>

    <string name="closethisapplication">Are You Sure Want to Logout.. </string>
    <string name="Logoutapp">Logout</string>

    <string name="dddd">dddd</string>


</resources>
