<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    card_view:cardBackgroundColor="#14ffffff"
                    card_view:cardCornerRadius="1dp"
                    card_view:cardElevation="1dp"
                    card_view:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="2dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:orientation="vertical">


                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/f_name_main"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:textSize="14dp">

                            <EditText
                                android:id="@+id/name_main"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="lato"
                                android:hint="@string/name"
                                android:inputType="textPersonName"
                                android:textSize="14dp" />
                        </android.support.design.widget.TextInputLayout>


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginTop="3dp"
                            android:text="@string/gender"
                            android:textSize="14dp"
                            android:textStyle="bold" />

                        <RadioGroup
                            android:id="@+id/radiogroup_main"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:layout_marginTop="8dp"
                            android:orientation="horizontal">

                            <RadioButton

                                android:id="@+id/radio_male"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/male"
                                android:textSize="15dp" />

                            <RadioButton
                                android:id="@+id/radio_female"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="40dp"
                                android:text="@string/female"
                                android:textSize="15dp" />

                            <RadioButton
                                android:id="@+id/radio_other"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="40dp"
                                android:text="@string/other"
                                android:textSize="15dp" />
                        </RadioGroup>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/f_age_main"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:textSize="14dp">

                            <EditText
                                android:id="@+id/age_main"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="lato"
                                android:hint="@string/age"
                                android:inputType="number"
                                android:textSize="14dp" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/f_address_main"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:textSize="14dp">

                            <EditText
                                android:id="@+id/address_main"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="lato"
                                android:gravity="top|left"
                                android:hint="@string/address"
                                android:inputType="textMultiLine"
                                android:lines="2"
                                android:maxLines="2"
                                android:scrollbars="vertical"
                                android:textSize="14dp" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/f_village_main"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:textSize="14dp">

                            <EditText
                                android:id="@+id/village_main"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="lato"
                                android:hint="@string/village"
                                android:inputType="textPersonName"
                                android:textSize="14dp" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/f_ass_main"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:textSize="14dp">

                            <EditText
                                android:id="@+id/ass_main"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="lato"
                                android:hint="@string/assembly"
                                android:inputType="textPersonName"
                                android:textSize="14dp" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/f_dist_main"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:textSize="14dp">

                            <EditText
                                android:id="@+id/dist_main"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="lato"
                                android:hint="@string/dist"
                                android:inputType="textPersonName"
                                android:textSize="14dp" />
                        </android.support.design.widget.TextInputLayout>


                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/f_txt_main"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:textSize="14dp">

                            <EditText
                                android:id="@+id/text_main"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="lato"
                                android:hint="@string/tx1"
                                android:inputType="textPersonName"
                                android:textSize="14dp" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/f_tx2_main"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:textSize="14dp">

                            <EditText
                                android:id="@+id/tx2_main"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="lato"
                                android:hint="@string/tx2"
                                android:inputType="textPersonName"
                                android:textSize="14dp" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/f_tx3_main"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:textSize="14dp">

                            <EditText
                                android:id="@+id/tx3_main"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="lato"
                                android:hint="@string/tx3"
                                android:inputType="textPersonName"
                                android:textSize="14dp" />
                        </android.support.design.widget.TextInputLayout>

                        <Button
                            android:id="@+id/next_main"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginRight="20dp"
                            android:background="@color/colorAccent"
                            android:text="@string/next"
                            android:textColor="@color/white"
                            android:textSize="14dp" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>