<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".F3Activity">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="4dp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="@color/white"
                card_view:cardBackgroundColor="#14ffffff"
                card_view:cardCornerRadius="1dp"
                card_view:cardElevation="1dp"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/q3"
                            android:textSize="14dp" />

                        <RadioGroup
                            android:id="@+id/radiogroup_q1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="8dp"
                            android:orientation="vertical">

                            <RadioButton

                                android:id="@+id/radio_1vp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/vp"
                                android:textSize="15dp" />

                            <RadioButton
                                android:id="@+id/radio_1v"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="3dp"
                                android:text="@string/poor"
                                android:textSize="15dp" />

                            <RadioButton
                                android:id="@+id/radio_1ok"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="3dp"
                                android:text="@string/ok"
                                android:textSize="15dp" />

                            <RadioButton
                                android:id="@+id/radio_1good"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="3dp"
                                android:text="@string/good"
                                android:textSize="15dp" />

                        </RadioGroup>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <Button
                                android:id="@+id/back_f3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:layout_marginLeft="30dp"
                                android:layout_marginTop="10dp"
                                android:background="@color/colorAccent"
                                android:onClick="backPage"
                                android:text="@string/back"
                                android:textColor="@color/white"
                                android:textSize="14dp" />

                            <Button
                                android:id="@+id/next_f3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_marginRight="30dp"
                                android:layout_marginTop="10dp"
                                android:background="@color/colorAccent"
                                android:onClick="nextPage"
                                android:text="@string/next"
                                android:textColor="@color/white"
                                android:textSize="14dp" />


                        </RelativeLayout>
                    </LinearLayout>


                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>